# rust-async-db-exercise

./: Cargo.toml  README.md  schema.sql  urls.db
.sqlx/: query-c0f7ddb2970ead82aacb8012b88f5baa36461a51d8135cb4df10fcf09792ff48.json  query-fa1075aa510b20e7f419516823c7d21c4a853cc0f299a2f222816df654c228c4.json
src/: db.rs  errors.rs  main.rs  models.rs  state.rs  validators.rs
src/routes/: mod.rs  url.rs
